Version 1.42
Add Companion9X changelog
Simplify burn menu for sky9x and taranis.
Fix in telemetry conversion (rssi alarm) for stock board...

Version 1.41
Fix unneeded rescaling of splash images
Fix for telemetry screens for taranis

Version 1.40
Log dialog - Split of logging sessions.
Telemetry screen 1 as default (issue 206)
Rename all channels in mixer tab accordingly to limits names
Fix a segfault in phases tabs (Issue 203 regression introduced in release 2140)

Version 1.39
Custom functions cut&paste 
Custom switches cut&paste 
Color button text in curve editor for MACOSX
Adjust name lengths for taranis 

Version 1.38
Core when model names are > 10 chars

Version 1.37
Fix OpenTX segfault in taranis simulator
Implement brightness control for Taranis
Reduce modeledit windows size
Taranis splash screen in grayscale

Version 1.36
Burning windows (with progress bar) now in foreground (Issue 197)
Allow a selection of tracks for Background Music (Issue 199)

Version 135
Country names mismatch between Taranis and Companion 9X (Issue 198)
TIM function in custom switches
Fix timer switches.
Taranis lcd adjustment in general settings.
New tool in curve editor
Minor fixes
Expo move bug + invalid chars in channels, expo and mixer names
Try to reduce modeledit window form MAC
Wrong init of RF-Module data
Read flash from TX didn't worked for taranis