@@ -2,6 +2,8 @@
 #define CONTRIBUTORSDIALOG_H
 
 #include <QDialog>
+#include "eeprominterface.h"
+#include "downloaddialog.h"
 
 namespace Ui {
     class contributorsDialog;
@@ -11,13 +13,19 @@ class contributorsDialog : public QDialog
 {
     Q_OBJECT
 public:
-    explicit contributorsDialog(QWidget *parent = 0, int contest = 0);
+    explicit contributorsDialog(QWidget *parent = 0, int contest = 0, QString fwId = QString() );
     ~contributorsDialog();
 
 private:
     Ui::contributorsDialog *ui;
+    QNetworkAccessManager *manager;
 
     void showEvent ( QShowEvent * );
+
+private slots:
+    void forceClose();
+    void replyFinished(QNetworkReply * reply);   
+    
 };
 
 #endif // CONTRIBUTORSDIALOG_H
