@@ -1,5 +1,6 @@
 Version 1.42
 Add Companion9X changelog
+Add Fw release notes browser
 Simplify burn menu for sky9x and taranis.
 Fix in telemetry conversion (rssi alarm) for stock board...
 
